<resources>
    <string name="app_name">Todos</string>
    <string name="username">user name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">confirm password</string>
    <string name="app_copyright" translatable="false">Ramen.GQ All right reserved 2018</string>
    <string name="email">email</string>
    <string name="email_format_error">Email format error</string>
    <string name="password_too_short">Password must be greater than 6</string>
    <string name="password_too_long">Password must be shorter than 30</string>
    <string name="password_cant_empty">Password can\'t empty</string>
    <string name="password_is_different">Password is different</string>
    <string name="username_cant_empty">User name can\'t empty</string>
    <string name="please_login_agagin">Authentication failure,please login</string>

    <string name="please_checkout_the_username_password">Please check if the account password is set correctly.</string>
    <string name="index">index</string>
    <string name="edit">edit</string>
    <string name="discover">discover</string>
    <string name="online_content_start">online content start</string>

    <string name="state_private">private</string>
    <string name="state_check">checking</string>
    <string name="state_public">public</string>

    <string name="add_tag">Add tag</string>
    <string name="title_cant_empty">Title can\'t empty</string>
    <string name="content_cant_empty">Content can\'t empty</string>
    <string name="url_must_start_http_https">Url must start with "http://" or "https://"</string>

    <string name="save_success">save failed</string>
    <string name="save_failed">save failed</string>

    <string name="delete">Delete</string>
    <string name="delete_confirm_str">Are you sure to delete this content?</string>
    <string name="delete_success">delete success</string>
    <string name="delete_failed">delete failed</string>

    <string name="version">Version</string>
    <string name="update_info">Update infos</string>
    <string name="new_version_coming">We have a new version</string>
    <string name="download_new_version">Try it NOW!</string>
</resources>
